# meowDecoder

./: .gitignore  ARCHITECTURE.md  AUDITORIA-TECNICA.md  CAMBIOS-Y-VERIFICACION.md  CONTRIBUTING.md  DEPLOYMENT.md  PLAN-95.md  README.md  ROADMAP.md
.github/: dependabot.yml
docs/: deployment.md  development.md  (+3 more)
training/: README.md  config.yaml  pyproject.toml
training/artifacts/: synthetic_mlp.npz
training/docs/: chatgpt_deep_research_prompt.md
training/scripts/: apply_review_deletions.py  audit_labels.py  autolabel.py  build_prosodic_cache.py  calibrate_thresholds.py  check_class_balance.py  clean_audio.py  clean_augmented.py  compute_audioset_scores.py  dedup_against_existing.py  dedup_embeddings.py  fetch_audioset_strong.py  fetch_freesound_weak.py  fetch_quarantine.py  filter_by_audioset.py  generate_parity_fixtures.py  ingest_dynsuperb.py  ingest_folder.py  ingest_freesound_targeted.py  ingest_naya.py  make_review_set.py  mine_meow10k.py  prepare_catmeows.py  prepare_freesound.py  prepare_meow10k.py  prepare_pandeya.py  prepare_vggsound.py  preprocess_audio.py  prune_label_noise.py  qc_audio.py  qc_final.py  qc_final_cull.py  qc_intraclass.py  qc_semantic.py  rebuild_clean_dataset.py  run_120min_session.py  sanitize_cat_ids.py  sweep_head.py  train_synthetic_model.py  tune_head.py
training/src/meowdecoder_training/: __init__.py  dataset.py  export.py  export_yamnet_head.py  export_yamnet_onnx.py  features.py  mlp_onnx.py  model.py  prosodic_features.py  synthetic.py  train.py  yamnet_model.py  yamnet_pipeline.py
training/tests/: test_features.py
(+209 files in other folders)
