[project]
name = "meowdecoder-training"
version = "0.1.0"
description = "Training and ONNX export pipeline for MeowDecoder feline vocalization classifier"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchaudio>=2.2",
  "numpy>=1.26",
  "soundfile>=0.12",
  "scikit-learn>=1.4",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "pyyaml>=6.0",
  "torchvision>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
