[project]
name = "meowdecoder-training"
version = "0.2.0"
description = "Training and ONNX export pipeline for MeowDecoder feline vocalization classifier (11 classes, YAMNet transfer learning)"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "soundfile>=0.12",
  "scikit-learn>=1.4",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "pyyaml>=6.0",
  "scipy>=1.12",
]

[project.optional-dependencies]
yamnet = [
  "tensorflow>=2.16.0",
  "tensorflow-hub>=0.16.0",
  "tf2onnx>=1.16.0",
  "librosa>=0.10.0",
]
dev = ["pytest>=8.0", "ruff>=0.4", "matplotlib>=3.8", "tqdm>=4.66", "pandas>=2.1"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"